[project]
name = "shraga-tutorial"
version = "0.1.0"
description = ""
authors = [
    {name = "lizozom",email = "lizka.k@gmail.com"}
]
requires-python = ">=3.11,<4.0"
dependencies = [
    "shraga-common (>=0.1.6,<0.2.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
